--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -41,9 +41,7 @@
 .logo-icon img {
   width: 86px;
   height: 86px;
-  aspect-ratio: 1;
   object-fit: contain;
-  display: block;
 }
 
 .brand-name {
