--- a/src/components/LoadingSpinner.css
+++ b/src/components/LoadingSpinner.css
@@ -3,8 +3,7 @@
   align-items: center;
   justify-content: center;
   padding: 3rem 1rem;
-  height: 200px;
-  contain: layout style paint;
+  min-height: 200px;
 }
 
 .loading-spinner--fullscreen {
